css/main.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */
@import url (http://terranight.com.br/fonts/century_gothic/stylesheet.css);

.gc{
font-family:'century gothic';
color:#FFFFFF !important;
text-shadow:0px 2px 13px rgba(255, 255, 255, 0.3);
}
@font-face{
font-family: 'aldosemibold';
    src: url('../fonts/aldo_pc/aldo_pc-webfont.eot');
    src: url('../fonts/aldo_pc/aldo_pc-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/aldo_pc/aldo_pc-webfont.woff') format('woff'),
         url('../fonts/aldo_pc/aldo_pc-webfont.ttf') format('truetype'),
         url('../fonts/aldo_pc/aldo_pc-webfont.svg#aldosemibold') format('svg');
    font-weight: normal;
    font-style: normal;
}
.aldo{
color:#FFFFFF !important;
font-family:'aldosemibold';
font-size:40px;
font-weight:lighter;
text-shadow:0px 2px 13px rgba(255, 255, 255, 0.3);
}

.nav{
padding: 8px;
}
a:active, a:hover, a:focus{
background-color:#111111;
color:#9F0034;
}
.carousel-control a:active, a:hover, a:focus{
background-color:transparent;
}
body{
background:url("../img/header-background.png") no-repeat #000000;

}
.navbar-inverse .navbar-nav .agenda > li > a{
color:#FFFFFF;
}
.navbar-inverse{
background-color:#000000;
border-color:#000000;
}
.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus{
color:#FFCC00 !important;
background-color:transparent;
}
.label-warning{
background-color:#F6931C;
}
.terranight-lg, 
.terranight-md,
.terranight-sm,
.terranight-xs{
position:absolute;
margin-top:15%;
z-index:1;
}
.terranight-lg{
top:30px;
width:210%;
right:0px;
}
.terranight-md{
width:210%;
position:absolute;
top:30px;
right:0px;
}
.terranight-xs{
position:absolute;
top:107px;
width:346%;
}
.acompanhe div{
margin:3px;
margin-bottom: auto;
}
.sessao{
background-image:url('../img/sessao.png');
background-repeat:no-repeat;
width:100%;
padding:20px;
}
/* ... */

